syntax = "proto3";

package proto;

option go_package = "UserService/proto;proto"; // Ensure this matches your go.mod module path

message User {
  int32 id = 1;
  string fname = 2;
  string city = 3;
  int64 phone = 4;
  float height = 5;
  bool married = 6;
}

message GetUserByIDRequest {
  int32 id = 1;
}

message GetUserByIDResponse {
  User user = 1;
}

message GetUsersByIDsRequest {
  repeated int32 ids = 1;
}

message GetUsersByIDsResponse {
  repeated User users = 1;
}

message SearchUsersRequest {
  string city = 1;
  int64 phone = 2;
  bool married = 3;
}

message SearchUsersResponse {
  repeated User users = 1;
}

service UserService {
  rpc GetUserByID(GetUserByIDRequest) returns (GetUserByIDResponse);
  rpc GetUsersByIDs(GetUsersByIDsRequest) returns (GetUsersByIDsResponse);
  rpc SearchUsers(SearchUsersRequest) returns (SearchUsersResponse);
}
